--- a/index.html
+++ b/index.html
@@ -1,69 +1,142 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
 
-  <title>Harsh Chauhan | Data Analyst Portfolio | Power BI, SQL, Python</title>
+<title>Harsh Chauhan | Data Analyst Portfolio</title>
 
-  <meta name="description"
-    content="Harsh Chauhan – Entry-level Data Analyst skilled in Power BI, SQL, Python, and Excel. Built E-commerce analytics dashboards, customer segmentation models, and business intelligence reports." />
+<meta name="description" content="Harsh Chauhan – Data Analyst skilled in Power BI, SQL, Python, Excel. Built analytics dashboards, customer segmentation models, and data-driven systems."/>
+<meta name="keywords" content="Data Analyst, Power BI, SQL, Python, Data Analytics Portfolio"/>
+<meta name="robots" content="index, follow"/>
 
-  <meta name="robots" content="index, follow" />
-  <meta name="job-role" content="Data Analyst, Power BI Analyst, Business Analyst" />
+<style>
+/* ===== THEME ===== */
+:root{
+  --bg:#0b0b0c;
+  --card:#11161a;
+  --text:#eaf2f7;
+  --muted:#9aa5ad;
+  --accent:#00b7ff;
+  --glow:rgba(0,183,255,.25);
+  --radius:14px;
+}
 
-  <!-- ====== STYLES ====== -->
-  <style>
-    :root{
-      --bg:#0b0b0c;
-      --card:#0f1315;
-      --muted:#9aa5ad;
-      --text:#e6f0f6;
-      --accent:#00b7ff;
-      --accent-2: rgba(0,183,255,0.14);
-      --radius:12px;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
-      background:var(--bg);
-      color:var(--text);
-    }
-    a{color:var(--accent); text-decoration:none;}
-    nav{
-      position:fixed; top:0; left:0; right:0;
-      height:72px; display:flex; align-items:center; justify-content:space-between;
-      padding:12px 28px; backdrop-filter:blur(8px);
-      background:rgba(0,0,0,0.6); z-index:50;
-    }
-    .brand{font-weight:700; font-size:18px;}
-    .navlinks a{margin-left:16px; font-size:14px;}
-    .wrap{max-width:1100px; margin:110px auto 80px; padding:0 20px;}
-    h1{font-size:34px; margin-bottom:8px;}
-    h2{margin-top:40px;}
-    .sub{color:var(--muted); font-size:15px; max-width:850px; margin:auto;}
-    .skills-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:12px;}
-    .badge,.pill{
-      padding:10px 12px; border-radius:999px;
-      background:rgba(255,255,255,0.05);
-      font-size:13px; font-weight:600;
-    }
-    .projects{display:grid; grid-template-columns:repeat(auto-fit,minmax(320px,1fr)); gap:20px;}
-    .card{
-      background:rgba(255,255,255,0.04);
-      padding:18px; border-radius:var(--radius);
-      box-shadow:0 10px 30px rgba(0,0,0,.4);
-    }
-    .title{font-weight:700; font-size:16px;}
-    .tools{display:flex; flex-wrap:wrap; gap:8px;}
-    footer{text-align:center; margin-top:50px; color:var(--muted);}
-    .resume-btn{
-      display:inline-block; margin-top:14px;
-      background:var(--accent); color:#001;
-      padding:10px 16px; border-radius:10px; font-weight:700;
-    }
-  </style>
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+  background:var(--bg);
+  color:var(--text);
+  scroll-behavior:smooth;
+}
+
+a{color:var(--accent);text-decoration:none}
+
+/* ===== NAV ===== */
+nav{
+  position:fixed;
+  top:0;left:0;right:0;
+  height:72px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:14px 28px;
+  backdrop-filter:blur(10px);
+  background:rgba(0,0,0,.6);
+  z-index:99;
+}
+
+.brand{font-weight:800;letter-spacing:.6px}
+.navlinks a{margin-left:18px;font-size:14px}
+
+.resume-btn{
+  background:var(--accent);
+  color:#001;
+  padding:10px 16px;
+  border-radius:12px;
+  font-weight:800;
+}
+
+/* ===== LAYOUT ===== */
+.wrap{max-width:1150px;margin:120px auto 80px;padding:0 20px}
+section{margin-top:60px}
+h1{font-size:36px}
+h2{font-size:26px;margin-bottom:20px}
+.sub{color:var(--muted);max-width:820px}
+
+/* ===== ANIMATIONS ===== */
+.fade{
+  opacity:0;
+  transform:translateY(30px);
+  transition:all .8s ease;
+}
+.fade.show{opacity:1;transform:none}
+
+/* ===== BADGES ===== */
+.grid{display:grid;gap:14px}
+.skills,.certs{
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+}
+.badge{
+  padding:12px;
+  border-radius:999px;
+  text-align:center;
+  font-weight:700;
+  font-size:13px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.06);
+  transition:.3s;
+}
+.badge:hover{
+  transform:translateY(-6px);
+  box-shadow:0 0 30px var(--glow);
+}
+
+/* ===== PROJECT CARDS ===== */
+.projects{
+  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
+}
+.card{
+  background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
+  border-radius:var(--radius);
+  padding:22px;
+  border:1px solid rgba(255,255,255,.06);
+  box-shadow:0 18px 40px rgba(0,0,0,.5);
+  transition:.35s;
+  position:relative;
+  overflow:hidden;
+}
+.card:before{
+  content:'';
+  position:absolute;
+  inset:0;
+  background:linear-gradient(120deg,transparent,var(--glow),transparent);
+  opacity:0;
+  transition:.4s;
+}
+.card:hover{
+  transform:translateY(-10px) scale(1.02);
+}
+.card:hover:before{opacity:1}
+
+.card h3{margin-top:0}
+.tools{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
+.pill{
+  font-size:12px;
+  padding:6px 10px;
+  border-radius:8px;
+  background:rgba(255,255,255,.05);
+}
+
+/* ===== FOOTER ===== */
+footer{
+  text-align:center;
+  margin-top:80px;
+  color:var(--muted);
+  font-size:14px;
+}
+</style>
 </head>
 
 <body>
@@ -73,122 +146,184 @@
   <div class="navlinks">
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
-    <a href="#experience">Experience</a>
+    <a href="#certs">Certifications</a>
     <a href="#contact">Contact</a>
+    <a class="resume-btn" href="Harsh_Chauhan_Data_Analyst_Resume.pdf" download>Download Resume</a>
   </div>
 </nav>
 
 <main class="wrap">
 
-<!-- ===== HERO ===== -->
-<header>
+<header class="fade">
   <h1>Harsh Chauhan</h1>
   <p class="sub">
-    Entry-level <strong>Data Analyst</strong> skilled in <strong>Power BI, SQL, Python, and Excel</strong>.
-    Experienced in building KPI dashboards, customer segmentation models,
-    and product performance analytics for data-driven business decisions.
+    Entry-level <b>Data Analyst</b> specializing in <b>Power BI, SQL, Python & Excel</b>.
+    Experienced in analytics dashboards, customer segmentation, and data-driven decision making.
   </p>
-  <a class="resume-btn" href="Harsh_Chauhan_Data_Analyst_Resume.pdf" download>
-    Download Resume
-  </a>
 </header>
 
-<!-- ===== ATS KEYWORDS (HIDDEN) ===== -->
-<section aria-hidden="true" style="opacity:0;height:0;overflow:hidden;">
-Data Analyst, Business Analyst, Power BI Developer, SQL Analyst, Excel Analyst,
-Dashboard Reporting, KPI Analysis, Customer Segmentation, Sales Analytics,
-Product Analytics, Data Cleaning, Exploratory Data Analysis, DAX,
-Business Intelligence, Reporting Automation
+<!-- ATS KEYWORDS -->
+<section style="opacity:0;height:0;overflow:hidden">
+Data Analyst, Power BI Analyst, SQL Analyst, Business Intelligence, KPI Dashboards,
+Customer Segmentation, Sales Analytics, Product Analytics, Data Visualization, EDA
 </section>
 
-<!-- ===== SKILLS ===== -->
-<section id="skills">
-  <h2>Skills</h2>
-  <div class="skills-grid">
-    <span class="badge">Power BI</span>
-    <span class="badge">SQL</span>
-    <span class="badge">Python</span>
-    <span class="badge">Excel</span>
-    <span class="badge">DAX</span>
-    <span class="badge">EDA</span>
-    <span class="badge">Data Visualization</span>
-    <span class="badge">Business Intelligence</span>
-  </div>
-</section>
+<!-- SKILLS -->
+<!-- SKILLS -->
+<section id="skills" class="fade">
+  <h2>Technical Skills</h2>
 
-<!-- ===== PROJECTS ===== -->
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects">
+  <div class="grid skills">
 
-    <!-- PROJECT 1 -->
+    <!-- Programming & Analytics -->
     <div class="card">
-      <div class="title">E-Commerce Sales Analytics Dashboard | Power BI</div>
-      <p>
-        Built an end-to-end E-commerce Sales Analytics Dashboard using Power BI.
-        Designed KPIs (Total Sales, Orders, AOV), performed customer segmentation,
-        and analyzed product performance to identify revenue-driving products.
-      </p>
+      <h3>Programming & Analytics</h3>
+      <div class="tools">
+        <span class="pill">Python (Pandas, NumPy)</span>
+        <span class="pill">C++</span>
+        <span class="pill">Java</span>
+        <span class="pill">SQL</span>
+      </div>
+    </div>
+
+    <!-- Data Analysis -->
+    <div class="card">
+      <h3>Data Analysis</h3>
+      <div class="tools">
+        <span class="pill">Exploratory Data Analysis (EDA)</span>
+        <span class="pill">Data Cleaning</span>
+        <span class="pill">Descriptive Statistics</span>
+        <span class="pill">Business Insights</span>
+        <span class="pill">KPI Analysis</span>
+      </div>
+    </div>
+
+    <!-- Visualization & BI -->
+    <div class="card">
+      <h3>Visualization & BI</h3>
       <div class="tools">
         <span class="pill">Power BI</span>
-        <span class="pill">DAX</span>
-        <span class="pill">SQL</span>
-        <span class="pill">Impact: Business Insights</span>
-      </div>
-      <p style="margin-top:10px;">
-        🔗 <a href="https://github.com/lucifer11125" target="_blank">GitHub Project</a>
-      </p>
-    </div>
-
-    <!-- PROJECT 2 -->
-    <div class="card">
-      <div class="title">Health Data Information Management System</div>
-      <p>
-        Analyzed healthcare datasets using Python and Excel to identify underserved regions.
-        Performed EDA and automated reporting workflows improving operational efficiency by 40%.
-      </p>
-      <div class="tools">
-        <span class="pill">Python</span>
         <span class="pill">Excel</span>
-        <span class="pill">EDA</span>
-        <span class="pill">Impact: 40% Efficiency Gain</span>
+        <span class="pill">Matplotlib</span>
+        <span class="pill">Data Visualization</span>
       </div>
-      <p style="margin-top:10px;">
-        🔗 <a href="https://github.com/lucifer11125" target="_blank">GitHub Project</a>
-      </p>
+    </div>
+
+    <!-- Databases -->
+    <div class="card">
+      <h3>Databases</h3>
+      <div class="tools">
+        <span class="pill">MySQL</span>
+        <span class="pill">Relational Databases</span>
+      </div>
+    </div>
+
+    <!-- Automation & ETL -->
+    <div class="card">
+      <h3>Automation & ETL</h3>
+      <div class="tools">
+        <span class="pill">ETL Pipelines</span>
+        <span class="pill">Data Pipelines</span>
+        <span class="pill">Workflow Automation</span>
+      </div>
+    </div>
+
+    <!-- SQL Expertise -->
+    <div class="card">
+      <h3>SQL Expertise</h3>
+      <div class="tools">
+        <span class="pill">Joins</span>
+        <span class="pill">Aggregations</span>
+        <span class="pill">Subqueries</span>
+        <span class="pill">Data Retrieval</span>
+      </div>
+    </div>
+
+    <!-- AI & ML -->
+    <div class="card">
+      <h3>AI & Machine Learning</h3>
+      <div class="tools">
+        <span class="pill">Machine Learning </span>
+        <span class="pill">Artificial Intelligence</span>
+        <span class="pill">Scikit-learn</span>
+        <span class="pill">Model-Ready Data</span>
+      </div>
     </div>
 
   </div>
 </section>
 
-<!-- ===== EXPERIENCE ===== -->
-<section id="experience">
-  <h2>Experience</h2>
-  <div class="card">
-    <div class="title">Data Science Engineer Intern — Prodigy Infotech</div>
-    <p>Dec 2024 – Jan 2025</p>
-    <ul>
-      <li>Cleaned and preprocessed datasets improving data quality by 30%.</li>
-      <li>Performed exploratory data analysis to extract business insights.</li>
-      <li>Built dashboards reducing manual reporting time by 25%.</li>
-      <li>Prepared datasets for analytics and ML workflows.</li>
-    </ul>
-  </div>
+<!-- PROJECTS -->
+<section id="projects" class="fade">
+<h2>Projects</h2>
+<div class="grid projects">
+
+<div class="card">
+<h3>E-Commerce Sales Analytics Dashboard</h3>
+<p>Built a 3-page Power BI dashboard analyzing sales trends, customer segmentation, and product performance using KPIs and slicers.</p>
+<div class="tools">
+<span class="pill">Power BI</span><span class="pill">DAX</span><span class="pill">SQL</span>
+<span class="pill">Impact: Business Insights</span>
+</div>
+<p><a href="https://github.com/lucifer11125" target="_blank">View on GitHub →</a></p>
+</div>
+
+<div class="card">
+<h3>Crowd-Source Civic Issue Reporting System</h3>
+<p>Designed a citizen-centric system for reporting civic issues with workflow automation, location tagging, and admin dashboards.</p>
+<div class="tools">
+<span class="pill">Python</span><span class="pill">Flask</span><span class="pill">SQL</span>
+<span class="pill">Impact: Smart Governance</span>
+</div>
+</div>
+
+<div class="card">
+<h3>Health Data Information Management System</h3>
+<p>Analyzed healthcare datasets using Python & Excel to identify underserved regions and improved reporting efficiency by 40%.</p>
+<div class="tools">
+<span class="pill">Python</span><span class="pill">Excel</span><span class="pill">EDA</span>
+<span class="pill">Impact: 40% Efficiency</span>
+</div>
+</div>
+
+</div>
 </section>
 
-<!-- ===== CONTACT ===== -->
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:harshchauhan11125@gmail.com">harshchauhan11125@gmail.com</a></p>
-  <p>LinkedIn: <a href="https://linkedin.com/in/harsh-chauhan-0439a6307" target="_blank">Profile</a></p>
-  <p>GitHub: <a href="https://github.com/lucifer11125" target="_blank">Repositories</a></p>
+<!-- CERTIFICATIONS -->
+<section id="certs" class="fade">
+<h2>Certifications</h2>
+<div class="grid certs">
+  <div class="badge">Accenture – Data Analytics & Visualization</div>
+  <div class="badge">Simplilearn – Power BI</div>
+  <div class="badge">IBM – Python for Data Science</div>
+  <div class="badge">IBM – Exploratory Data Analysis</div>
+  <div class="badge">IBM – Cloud Computing</div>
+  <div class="badge">Duke University – Cloud Data Engineering</div>
+  <div class="badge">Cisco – Networking Basics</div>
+</div>
 </section>
 
-<footer>
-  © 2026 Harsh Chauhan · Data Analyst Portfolio
-</footer>
+<!-- CONTACT -->
+<section id="contact" class="fade">
+<h2>Contact</h2>
+<p>Email: <a href="mailto:harshchauhan11125@gmail.com">harshchauhan11125@gmail.com</a></p>
+<p>LinkedIn: <a href="https://linkedin.com/in/harsh-chauhan-0439a6307" target="_blank">Profile</a></p>
+<p>GitHub: <a href="https://github.com/lucifer11125" target="_blank">Repositories</a></p>
+</section>
+
+<footer>© 2026 Harsh Chauhan · Data Analyst Portfolio</footer>
 
 </main>
+
+<script>
+const faders=document.querySelectorAll('.fade');
+const obs=new IntersectionObserver(e=>{
+  e.forEach(x=>{
+    if(x.isIntersecting){x.target.classList.add('show')}
+  })
+},{threshold:.15});
+faders.forEach(f=>obs.observe(f));
+</script>
+
 </body>
 </html>
-
